--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,7 @@
     width: 200px;
     height: 200px;
     border: 4px solid white;
+    /*  wciśnięcie linii do wewnątrz kontenera  */
     box-sizing: border-box;
 }
 
@@ -23,7 +24,9 @@
     top: 25%;
     bottom: 25%;
     border-radius: 50%;
-    border: 4px solid black;
+    border: 3px solid black;
+    /*  wciśnięcie linii do wewnątrz kontenera  */
+    box-sizing: border-box;
 }
 
 /* zdefiniowanie położenia i koloru tła kolejnych kwadratów */
